--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
             <version>2.11.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.json/javax.json-api -->
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
         <!-- https://mvnrepository.com/artifact/org.json/json -->
         <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
