--- a/pom.xml
+++ b/pom.xml
@@ -93,8 +93,17 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.1.4</version>
+        </dependency>
 
     </dependencies>
+
+
+
 
     <build>
         <plugins>
